# Tony-Human

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/: W5500.tar.xz
components/Bluetooth/: Bluetooth.c
components/E2prom/: E2prom.c
components/Fire/: Fire.c
components/Http/: CMakeLists.txt  Http.c  http.c
components/Human/: CMakeLists.txt  Human.c
components/Json_parse/: CMakeLists.txt  Json_parse.c
components/Json_parse/include/: Json_parse.h
components/LAN_MQTT/: CMakeLists.txt  lan_mqtt.c
components/LAN_MQTT/include/: lan_mqtt.h
components/Led/: CMakeLists.txt  Led.c
components/Localcalculation/: Localcalculation.c
components/Motorctl/: Motorctl.c
components/Mqtt/: Mqtt.c
components/My_Mqtt/: CMakeLists.txt  My_Mqtt.c
components/Nvs/: Nvs.c
components/RtcUsr/: CMakeLists.txt  RtcUsr.c
components/SHT30DIS/: sht30dis.c
components/ServerTimer/: ServerTimer.c
components/Smartconfig/: CMakeLists.txt  Smartconfig.c
components/Switch/: Switch.c
components/Uart0/: Uart0.c
components/W5500/: w5500_driver.c  w5500_spi.c
components/W5500_APP/: CMakeLists.txt  w5500_driver.c
components/W5500_APP/include/: w5500_driver.h
components/W5500_LIB/: CMakeLists copy.txt  CMakeLists.txt  MQTTPacket.c  MQTTSubscribeClient.c  w5500_dhcp.c  w5500_dns.c  w5500_socket.c
components/Wallkey/: Wallkey.c
components/Wind/: Wind.c
components/bsp/: tcp_bsp.c
components/my_spi/: CMakeLists.txt  w5500_spi.c
components/ota/: CMakeLists.txt  component.mk  ota.c
main/: app_main.c
(+32 files in other folders)
